--- a/css/styles.css
+++ b/css/styles.css
@@ -22,10 +22,12 @@ body{
     font-family: 'Bungee Inline', cursive;
     text-align: center;
 }
+
 #tag{
     font-size: 32px;
     font-family: 'Prosto One', cursive;
     text-align: center;
+    z-index: 1.0;
 }
 
 img{
@@ -65,9 +67,11 @@ img{
     margin: 10px;
     padding: 5px;
 }
+
 .vote{
     float: right; 
 }
+
 .up, .down{
     margin-left: 5px;
     margin-top: 10px;
@@ -85,7 +89,6 @@ footer{
   margin-right: auto;
   width: 50%;
   margin-top: 30px;
-
 }
 
 #logo{
