--- a/css/styles.css
+++ b/css/styles.css
@@ -82,25 +82,26 @@ img{
     font-size: 35px;
 }
 
-footer{
-  text-align: center;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  margin-top: 30px;
-}
-
-#logo{
-    width: 111px;
-    height: 111px;
-}
-
 #credits{
     font-size: 25px;
 }
 
 #depress, #moonWalk{
     display: none;
+}
+
+#footer{
+ font-size: 20px;
+ padding: 20px;
+ text-align: center;
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width: 20%;
+}
+
+#logo{
+  height: 100px;
+  width: 100px;
 }
 
